# mvp-notia-engine

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: architecture.md  cli-roadmap.md
events/: bordertest.json  parking.json
iota-identity-backend/: Cargo.toml  README.md
iota-identity-backend/src/: main.rs
schemas/: notia-canonical-event.schema.json
scripts/: test-anchor.ts  validate-cli-demo.ts
services/iota-identity-backend/: .gitignore  README.md  start.sh
src/: index.ts
src/aggregator/: aggregate.ts
src/bordertest/: compose.ts  demo-tui.ts  demo.ts  runBorderTest.ts
src/bundler/: bundler.ts
src/cli/: index.ts
src/core/: types.ts
src/iota/: anchor.ts  cargo-verify.ts  notarization-anchor.ts  types.ts  vehicle-verify.ts
src/microtools/: access.tool.ts  identity.tool.ts  supply.tool.ts  token.tool.ts
src/pipeline/: normalizer.ts  router.ts  structural-checker.ts
src/validator/: core-validator.ts  structural-checker.ts
tests/: core-fail.test.ts  determinism.test.ts  iota-adapter-contract.test.ts  parking-chain.test.ts  pruning.test.ts  stress.test.d.ts  stress.test.d.ts.map  stress.test.js.map  stress.test.ts  structural-fail.test.ts  yokohama-chain.test.ts  yokohama.test.d.ts.map  yokohama.test.js.map  yokohama.test.ts
