[package]
name = "iota-identity-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "identity-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.46.1", default-features = false, features = ["rt", "macros", "rt-multi-thread"] }

identity_iota = { git = "https://github.com/iotaledger/identity", tag = "v1.7.0-beta.5", default-features = false, features = ["iota-client", "send-sync", "memstore", "resolver"] }
identity_storage = { git = "https://github.com/iotaledger/identity", tag = "v1.7.0-beta.5" }
identity_stronghold = { git = "https://github.com/iotaledger/identity", tag = "v1.7.0-beta.5", default-features = false, features = ["send-sync-storage"] }
identity_eddsa_verifier = { git = "https://github.com/iotaledger/identity", tag = "v1.7.0-beta.5", default-features = false, features = ["ed25519"] }

iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.16.2" }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0" }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.11", package = "product_common", features = ["core-client", "transaction"] }
